[package]
name = "sys-libbgpstream"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Horan"]
description = "System bindings for bgpstream"
readme = "README.md"
license = "BSD-3-Clause"
documentation = "README.md"
repository = "https://github.com/brendanhoran/libbgpstream-sys"

[dependencies]

[build-dependencies]
bindgen = "0.65.1"
autotools = "0.2"
sedregex = "0.2.5"
