[package]
name = "libbgpstream-sys"
version = "0.1.1"
edition = "2021"
authors = ["Brendan Horan"]
description = "System bindings for bgpstream"
readme = "README.md"
license = "BSD-3-Clause"
documentation = "https://github.com/brendanhoran/libbgpstream-sys/blob/main/README.md"
repository = "https://github.com/brendanhoran/libbgpstream-sys"

[dependencies]
rdkafka-sys = "4.5.0"

[build-dependencies]
bindgen = "0.65.1"
autotools = "0.2"
rdkafka-sys = "4.5.0"
